<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_back"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/fl_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_template"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:adjustViewBounds="true" />

                <com.google.android.exoplayer2.ui.PlayerView
                    android:id="@+id/video_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:use_controller="false"
                    app:resize_mode="fixed_width"/>

                <LinearLayout
                    android:id="@+id/ll_text_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:textColor="#fff"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_body"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingTop="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp" />

                    <FrameLayout
                        android:id="@+id/ll_coupon_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/tv_coupon_code"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:paddingLeft="10dp"
                            android:paddingTop="5dp"
                            android:paddingRight="10dp"
                            android:paddingBottom="5dp"
                            android:text="@string/coupon_code" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/content_copy_24"
                            android:layout_gravity="center|end"
                            android:layout_marginRight="8dp"
                            android:layout_marginEnd="8dp" />

                    </FrameLayout>



                </LinearLayout>

                <com.visilabs.view.SmileRating
                    android:id="@+id/smileRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:visibility="gone"
                    app:isIndicator="false" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:isIndicator="false"
                    android:numStars="5"
                    android:stepSize="0.5"
                    android:visibility="gone" />

                <com.visilabs.view.NpsWithNumbersView
                    android:id="@+id/npsWithNumbersView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="1"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btn_template"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:padding="5dp"
                    android:text="@string/OK"
                    android:textAllCaps="false" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/ib_close"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="top|right"
                android:layout_margin="5dp"
                android:textColor="#fff" />

        </FrameLayout>
    </ScrollView>
</LinearLayout>