...
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:text="@string/image_button" />

            <Button
                android:id="@+id/inApp5"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:text="@string/image_text_button" />

            <Button
...
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:text="@string/mail_subscription_form" />

            <Button
                android:id="@+id/inApp12"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:text="@string/scratch_to_win" />

        </LinearLayout>
...
                android:layout_width="0.0dip"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:text="@string/nps_3" />

            <Button
                android:id="@+id/inApp21"
                android:layout_width="0.0dip"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:text="@string/half_screen" />

        </LinearLayout>
...
