...
                android:drawableEnd="@drawable/content_copy_24"
                android:text="@string/coupon_code" />

        </LinearLayout>

        <EditText
            android:id="@+id/commentBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="80dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="12dp"
...
            android:paddingRight="10dp"
            android:paddingBottom="8dp"
            android:maxLength="500"
            android:gravity="center"/>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:padding="8dp" />

...
